src/test/deca/syntax/invalid/lexer/identifier_lex-lex.corr
IDENT: [@0,204:206='int',<47>,13:0]
CLASS: [@1,208:212='class',<26>,14:0]
IDENT: [@2,214:217='void',<47>,15:0]
IDENT: [@3,219:223='float',<47>,16:0]
IDENT: [@4,225:230='string',<47>,17:0]
IDENT: [@5,232:237='blabla',<47>,18:0]
IDENT: [@6,239:241='int',<47>,19:0]
IDENT: [@7,243:245='int',<47>,19:4]
IDENT: [@8,247:249='int',<47>,20:0]
IDENT: [@9,251:251='x',<47>,20:4]
IDENT: [@10,253:256='____',<47>,21:0]
IDENT: [@11,258:261='$$$$',<47>,22:0]
IDENT: [@12,263:272='$123456789',<47>,23:0]
IDENT: [@13,274:279='abcABC',<47>,24:0]
IDENT: [@14,281:283='a1$',<47>,25:0]
IDENT: [@15,285:292='admin123',<47>,26:0]
INT: [@16,337:338='12',<45>,29:0]
IDENT: [@17,339:348='identifier',<47>,29:2]
